--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -1,17 +1,14 @@
-/* globals.css */
 .custom-gradient {
-    background: linear-gradient(
-      to right,
-      #0e0e0e,  /* From color */
-      #392e1e 20%, /* First via color */
-      #3a2c15 40%, /* Second via color */
-      #3d2c14 60%, /* Third via color */
-      #3e2a0c 80%  /* To color */
-    );
-  }
+  background: linear-gradient(
+    to right,
+    #0e0e0e,
+    #392e1e 20%,
+    #3a2c15 40%,
+    #3d2c14 60%,
+    #3e2a0c 80% 
+  );
+}
 
-  .filter.blur-sm {
-    filter: blur(6px);
-  }
-  
-  
+.filter.blur-sm {
+  filter: blur(6px);
+}
