--- a/src/app/css/styles.css
+++ b/src/app/css/styles.css
@@ -12,3 +12,12 @@
 .filter.blur-sm {
   filter: blur(6px);
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
